--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+body {
+  background-color: #282828;
+  display: grid;
+  grid-gap: 50px;
+  grid-template-columns: 100%;
+  grid-template-rows: 40% 60%;
+  justify-items: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.disable-select {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; 
+}
+
+#navegacion{
+  height: 60px;
+  width: 440px;
+  grid-row: 1;
+}
+
+#principal {
+  width: 440px; 
+  height: 300px;
+  grid-row: 2;
+}
+
+.button{
+  z-index: 1;
+  background-color: #c39f77;
+  border-width: 0px;
   color: white;
+  padding: 15px 32px;
+  font-size: 20px;
+  cursor: pointer;
+  width: 300px;
+  height: 55px;
+  grid-column: 1/3;
+  grid-row: 3;
+  justify-items: center;
+  align-items: center;
+  font-weight: 600;
 }
 
-.App-link {
-  color: #61dafb;
+.button:hover{
+  background-color: #9f8465;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
